Fixed another test by changing the sourceId node property from String[] to String. This is required for fulltext indexing.